k8s/calculator-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: calculator-cluster-ip-service
spec:
  selector:
    app: calculator
  ports:
    - port: 3000
      targetPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calculator
spec:
  replicas: 2
  selector:
    matchLabels:
      app: calculator
  template:
    metadata:
      labels:
        app: calculator
    spec:
      containers:
        - name: calculator
          image: vidalignacio/stock-calculator-service
          imagePullPolicy: Always
          # resources:
          #   limits:
          #     memory: "128Mi"
          #     cpu: "500m"
          ports:
            - containerPort: 3000
