k8s/orchestrator-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orchestrator-cluster-ip-service
spec:
  selector:
    app: orchestrator
  ports:
    - port: 3000
      targetPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orchestrator
spec:
  replicas: 2
  selector:
    matchLabels:
      app: orchestrator
  template:
    metadata:
      labels:
        app: orchestrator
    spec:
      containers:
        - name: orchestrator
          image: vidalignacio/stock-orchestrator-service
          # resources:
          #   limits:
          #     memory: "128Mi"
          #     cpu: "500m"
          ports:
            - containerPort: 3000
