k8s/pricer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pricer-cluster-ip-service
spec:
  selector:
    app: pricer
  ports:
    - port: 3000
      targetPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pricer
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pricer
  template:
    metadata:
      labels:
        app: pricer
    spec:
      containers:
        - name: pricer
          image: vidalignacio/stock-pricer-service
          imagePullPolicy: Always
          # resources:
          #   limits:
          #     memory: "128Mi"
          #     cpu: "500m"
          ports:
            - containerPort: 3000
